--- a/assets/index-B1Nn6VHY.css
+++ b/assets/index-B1Nn6VHY.css
@@ -667,9 +667,9 @@ video {
     height: auto
 }
 
-.h-full {
+/* .h-full {
     height: 100%
-}
+} */
 
 .h-screen {
     height: 100vh
@@ -1542,7 +1542,8 @@ input[type=number] {
     background-color: #fff;
     box-shadow: 2px 2px #000;
     cursor: pointer;
-    padding: 14px 24px
+    padding: 14px 24px;
+    background-color: #369500;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1279px) {
@@ -1581,13 +1582,46 @@ input[type=number] {
     height: 40px
 }
 
-.banner {
+/* .banner {
     padding-top: 216px;
     --stroke: 4px;
     background-image: url(banner-bg-D9a6L5nQ.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat
+} */
+
+
+.banner {
+    padding-top: 216px;
+    --stroke: 4px;
+    position: relative; /* Встановлюємо відносну позицію для батьківського елемента */
+    overflow: hidden; /* Приховуємо все, що виходить за межі блоку */
+}
+
+.banner::before {
+    content: ""; /* Створюємо псевдоелемент */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(banner-bg-D9a6L5nQ.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: -1; /* Розташовуємо псевдоелемент позаду контенту */
+    animation: rotateImage 10s linear infinite; /* Додаємо анімацію */
+}
+
+/* Ключові кадри для обертання */
+@keyframes rotateImage {
+    from {
+        transform: rotate(0deg); /* Початкова позиція */
+    }
+    to {
+        transform: rotate(360deg); /* Завершення оберту */
+    }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1279px) {
@@ -1656,7 +1690,32 @@ input[type=number] {
 
 .banner-title .title-1 {
     top: 38px;
-    left: 0
+    left: 0;
+    width: 100px; /* Початковий розмір */
+    height: 100px; /* Початковий розмір */
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    /* Додаємо анімацію */
+    animation: scaleAndFade 5s infinite; /* 5 секунд для одного циклу, повторюється безкінечно */
+}
+
+/* Анімація збільшення, зменшення і зникання */
+@keyframes scaleAndFade {
+    0% {
+        transform: scale(1); /* Початковий розмір */
+        opacity: 1; /* Повна видимість */
+    }
+    50% {
+        transform: scale(1.5); /* Збільшення на 50% */
+        opacity: 1; /* Повна видимість */
+    }
+    100% {
+        transform: scale(0); /* Зменшення до 0 (зникнення) */
+        opacity: 0; /* Повна прозорість */
+    }
 }
 
 @media only screen and (min-width: 1280px) and (max-width: 1439px) {
@@ -1686,10 +1745,17 @@ input[type=number] {
         max-width: 50px
     }
 }
-
 .banner-title .title-2 {
+    position: absolute; /* Якщо ще не встановлено */
     top: 4px;
-    left: 397px
+    left: 397px;
+
+    /* Додаємо плавний перехід для трансформації */
+    transition: transform 0.3s ease; /* Тривалість анімації 0.3 секунди */
+}
+
+.banner-title .title-2:hover {
+    transform: rotate(12deg); /* Поворот праворуч на 10 градусів */
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1279px) {
@@ -1721,8 +1787,35 @@ input[type=number] {
 }
 
 .banner-title .title-3 {
+    position: absolute; /* Якщо ще не встановлено */
     top: 40px;
-    right: -22px
+    right: -22px;
+
+    /* Стилі для картинки */
+    width: 100px; /* Початковий розмір */
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    /* Додаємо анімацію */
+    animation: scaleAndFade 5s infinite; /* 5 секунд для одного циклу, повторюється безкінечно */
+}
+
+/* Анімація збільшення, зменшення і зникання */
+@keyframes scaleAndFade {
+    0% {
+        transform: scale(1); /* Початковий розмір */
+        opacity: 1; /* Повна видимість */
+    }
+    50% {
+        transform: scale(1.5); /* Збільшення на 50% */
+        opacity: 1; /* Повна видимість */
+    }
+    100% {
+        transform: scale(0); /* Зменшення до 0 (зникнення) */
+        opacity: 0; /* Повна прозорість */
+    }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1279px) {
