--- a/assets/index-B1Nn6VHY.css
+++ b/assets/index-B1Nn6VHY.css
@@ -2562,7 +2562,8 @@ input:checked+label {
     }
 
     .md\:block {
-        display: block
+        display: block;
+        height: 100%
     }
 
     .md\:hidden {
