--- a/assets/index-B1Nn6VHY.css
+++ b/assets/index-B1Nn6VHY.css
@@ -1635,7 +1635,7 @@ input[type=number] {
         transform: translate(-50%, -50%) rotate(360deg); /* Завершення оберту */
     }
 }
-@media only screen and (min-width: 2024px) and (max-width: 2460px) {
+@media only screen and (min-width: 2024px) {
     .banner::before {
 
         width: 100%; /* Робимо картинку більшою, щоб вона виходила за межі */
